--- a/angular2命令相关.txt.html
+++ b/angular2命令相关.txt.html
@@ -27,6 +27,18 @@ npm install ngx-bootstrap bootstrap --save
 	]
 	5、 在模板中调用 src/app/app.component.html
 </peizhi>
+
+导入bootstrapcss样式
+<peizhi>
+	配置package.json
+	"dependencies":{
+		"bootstrap":"^3.3.7",
+		"font-awesome":"^4.7.0",
+	}
+	在styles.css里面导入
+	@import "~bootstrap/dist/css/bootstrap.min.css";
+	@import "~font-awesome/css/font-awesome.min.css";
+</peizhi>
 安装野狗实时通信数据库
 npm install wilddog --save
 <peizhi>
