--- a/angular2命令相关.txt.html
+++ b/angular2命令相关.txt.html
@@ -5,6 +5,8 @@ cnpm install
 安装必要组件
 搜索angular2 第三方插件
 https://www.npmjs.com
+学习rxjs
+https://segmentfault.com/a/1190000008834251
 
 安装ng2-bootstrap和bootstrap
 npm install ngx-bootstrap bootstrap --save
